# ThetaTerminalManager

./: .gitignore  Pipfile  README.md  ThetaTerminalManager.spec  build.bat  build.py  deactivate.bat  main.py  pyproject.toml  refresh_icon.bat  requirements.txt  update_version.py  version_info.py
app/: __init__.py  terminal_manager.py
app/resources/: icon_placeholder.txt
app/ui/: __init__.py  main_window.py
