[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thetadata-terminal-manager"
version = "1.0.1.2"
description = "ThetaData Terminal Manager - GUI for managing ThetaTerminal.jar"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "ajnaduvil", email = "ajnaduvil@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pyperclip>=1.8.2",
    "pyinstaller>=6.0.0",
]

[project.scripts]
thetadata-terminal-manager = "main:main"

[tool.uv]
dev-dependencies = []
package = true

[tool.uv.sources]

[tool.hatch.build.targets.wheel]
packages = ["app"] 